<resources>
    <string name="tvIntro">Introduzca sus datos</string>
    <string name="tvInst">Escoja una opción</string>
    <string name="tvRFC">Su RFC es:</string>
    <string name="tvNombre">Nombre(s):</string>
    <string name="feedbackname">De click a llenar</string>
    <string name="tvApellidoPaterno">Apellido Paterno</string>
    <string name="tvApellidoMaterno">Apellido Materno</string>
    <string name="tvFecha">Fecha de nacimiento</string>
    <string name="btnListo">Listo</string>
    <string name="btnRFC">RFC y edad</string>
    <string name="btnHoros">Signo de Zodiaco</string>
    <string name="btnChino">Año Chino</string>
    <string name="alertaDatos">Por favor revise sus datos</string>
    <string name="exitoso">Proceso exitoso</string>
    <string name="reqDatos">Obligatorio</string>
    <string name="tvHoros">Su signo zodiacal es:</string>
    <string name="tvChino">Su año chino es:</string>
    <string name="advertencia">Revise sus datos</string>
    <string name="error">Faltan datos</string>
    <string name="btnRegresa">Volver</string>
    <string name="btnSalir">Repetir</string>
    <string name= "btnLlenar">Llenar</string>
    <string name= "tvDia">Dia</string>
    <string name= "tvMes">Mes</string>
    <string name= "tvAnio">Año</string>
    <string name="borrado">La DB se borro con exito</string>
    <string name="dberror">No se pudo borrar la DB</string>
    <string name="dataError">No se mostraron con exito los datos</string>
    <string name="fechaError">Fecha inexistente hasta hoy</string>
</resources>
